--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title></title>
 </head>
 <body>
+    <header>
+      <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+            <input class="checkbox" type="checkbox"/>
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </div>
+            <div class="logo">
+              <h1>Популярні тури</h1>
+            </div>
+            <div class="menu-items">
+              <li><a href="#">Мій профіль</a></li>
+              <li><a href="#">Замовлення</a></li>
+              <li><a href="#">Повідомлення</a></li>
+              <li><a href="#">Улюблене</a></li>
+              <li><a href="#">Друзі</a></li>
+              <li><a href="#">Сповіщення</a></li>
+              <li><a href="#">Налаштування</a></li>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="main-box">
+      <div class="card-container">
+        <div class="main-card">
 
+        </div>
+      </div>
+    </main>
 </body>
 </html>
