(feature)task completed

--- a/index.html
+++ b/index.html
@@ -1,15 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>practicalTask</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  <title>PZ_1_4</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-
+<div class="card__header">
+  <div class="header__menu">
+    <a href="#">
+      <img class="menu" src="./img/icons/menu.png" alt="menu__icon">
+    </a>
+    <div class="menu__tittle">Популярні тури</div>
+  </div>
+  <div class="content">
+    <div class="card-post">
+      <img src="./img/images/image%206.jpg" alt="explo" class="content-post__image">
+      <div class="card-post__details">
+        <a href="#" class="card-post__text">
+          Тур вихідного дня:<br>"Гостинність Чорнобаївки"
+        </a>
+        <div class="card-post__buttons">
+          <a href="#" class="card-post__favorite">
+            <img src="./img/icons/favorite.png" alt="heart">
+          </a>
+          <a class="card-post__share" href="#">
+            <img src="./img/icons/share.png" alt="share">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card-post">
+      <img src="./img/images/image%205.jpg" alt="ship" class="content-post__image">
+      <div class="card-post__details">
+        <a href="#" class="card-post__text">
+          Дайвінг-тур "Таэмниці Зміїного"
+        </a>
+        <div class="card-post__buttons">
+          <a href="#" class="card-post__favorite">
+            <img src="./img/icons/favorite.png" alt="heart">
+          </a>
+          <a class="card-post__share" href="#">
+            <img src="./img/icons/share.png" alt="share">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card-post">
+      <img src="./img/images/image%208.jpg" alt="djavelin" class="content-post__image">
+      <div class="card-post__details">
+        <a href="#" class="card-post__text">
+          Сафарі-тур "Гадяцький"
+        </a>
+        <div class="card-post__buttons">
+          <a href="#" class="card-post__favorite">
+            <img src="./img/icons/favorite.png" alt="heart">
+          </a>
+          <a class="card-post__share" href="#">
+            <img src="./img/icons/share.png" alt="share">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card-post">
+      <img src="./img/images/image%209.jpg" alt="djavelin" class="content-post__image">
+      <div class="card-post__details">
+        <a href="#" class="card-post__text">
+          Майстер-клас “Ромський”
+        </a>
+        <div class="card-post__buttons">
+          <a href="#" class="card-post__favorite">
+            <img src="./img/icons/favorite.png" alt="heart">
+          </a>
+          <a class="card-post__share" href="#">
+            <img src="./img/icons/share.png" alt="share">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="card-post">
+      <img src="./img/images/image%2010.jpg" alt="djavelin" class="content-post__image">
+      <div class="card-post__details">
+        <a href="#" class="card-post__text">
+          Квест-тур “Київ за три дні”
+        </a>
+        <div class="card-post__buttons">
+          <a href="#" class="card-post__favorite">
+            <img src="./img/icons/favorite.png" alt="heart">
+          </a>
+          <a class="card-post__share" href="#">
+            <img src="./img/icons/share.png" alt="share">
+          </a>
+        </div>
+      </div>
+    </div>
+    </div>
+      <div class="content-footer">
+        <a href="" class="card-post__back">
+          <img src="./img/icons/back.png" alt="back">
+        </a>
+        <a href="" class="card-post__home">
+          <img src="./img/icons/home.png" alt="home">
+        </a>
+        <a href="" class="card-post__recent">
+          <img src="./img/icons/recent.png" alt="recent">
+        </a>
+  </div>
+  </div>
+</div>
 </div>
 </body>
 </html>
